fix overflow and date assigned on history page

--- a/app/indexer/indexer-games-assigned/styles.less
+++ b/app/indexer/indexer-games-assigned/styles.less
@@ -73,6 +73,8 @@
 
     .game-indexer-content {
         width: 100%;
+        overflow-x: none;
+        overflow-y: auto;
 
         h3 {
             padding-left: 15px;
